# mercari_bold_backend

./: README.md
detection/: gpt.py  main.py  model.py  pyproject.toml
pose-estimate/: blip.py  clip.py  main.py  model.py  pyproject.toml
