[tool.poetry]
name = "ubuntu"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.4.0+cpu", source = "pytorch"}
torchvision = {version = "^0.19.0+cpu", source = "pytorch"}
fastapi = "^0.112.2"
opencv-python = "^4.10.0.84"
transformers = "^4.44.2"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
